@@ -16,6 +16,7 @@ To make **sbotools** packages from the master branch, see [sbotools-git-slackbui
   * Wrap variable-length onscreen messaging (that can't be piped), prompts and error messages at 72 characters
   * sboconfig: Use --reset to restore all default configuration values
   * Build.pm: Remove temporary directory in case of signal
+  * Bugfix: Repair info files with missing quotation marks before parsing
 
 * 3.2.1 - 2024-12-20
   * Bugfix: sboinstall, sboupgrade GPG check for custom repositories (removed unneeded conditional)
