@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Info 3"
-.TH SBO::Lib::Info 3 "Pungenday, The Aftermath 66, 3190 YOLD" "" "sbotools 3.2.1"
+.TH SBO::Lib::Info 3 "Pungenday, The Aftermath 71, 3190 YOLD" "" "sbotools 3.2.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -156,7 +156,8 @@ other SlackBuilds requiring them.
 .Ve
 .PP
 \&\f(CWparse_info()\fR parses the contents of an info file from \f(CW$str\fR and returns
-a key-value list of all values present.
+a key-value list of all values present. It attempts to repair missing quotation
+marks.
 .SH AUTHORS
 .IX Header "AUTHORS"
 SBO::Lib was originally written by Jacob Pipkin <j@dawnrazor.net> with
