@@ -8,6 +8,7 @@ sbotools
   * Wrap variable-length onscreen messaging (that can't be piped), prompts and error messages at 72 characters
   * sboconfig: Use --reset to restore all default configuration values
   * Build.pm: Remove temporary directory for tee in case of signal
+  * Bugfix: Repair info files with missing quotation marks before parsing
 
 * 3.2.1 - 2024-12-20
   * Bugfix: sboinstall, sboupgrade GPG check for custom repositories (removed unneeded conditional)
